# Kissat-Sovereign

./: GLOBAL_DISCLOSURE.md  MANIFEST.in  README.md  declaration.sig  kissat_apex.py  pyproject.toml  real_hole10.cnf  setup.py  sovereign.py  test_apex.py
.github/workflows/: build.yml
benchmarks/: run_proofs.sh
evidence/: SCALING_PROOF.md
kissat_sovereign.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
sovereign_pkg/: engine.py
src/: application.c  banner.c  banner.h  build.c  identity.c
src_bundle/: build.c  search.c  sovereign.c  sovereign.h
